# TinyScript

./: .gitignore  CMakeLists.txt  IO.tiny  Main.cpp  Makefile  README.md  TinyScript  TinyScript.cpp  TinyScript.txt  TinySript  do_test  example_program.tiny  flags.h  in.txt  maths.tiny  out.s  out.txt  speed_test.tiny  speed_test.txt  syntax.tiny  syntax.txt  test.py  test.tiny  test.tinyasm  test.txt
Compiler/: Compiler
Compiler/Design/: layout.txt
Compiler/Include/: Bytecode.hpp  Class.hpp  CodeGen.hpp  Compiler.hpp  Debug.hpp  Expression.hpp  Function.hpp  Symbol.hpp  Tokenizer.hpp
Compiler/Src/: Class.cpp  Compiler.cpp  Debug.cpp  Expression.cpp  Function.cpp  Symbol.cpp  Tokenizer.cpp
Compiler2/: Compiler  Makefile  lexer.lex  parser.y  test.txt
Include/: Assembler.h  BinFile.h  Bytecode.h  Config.h  RuntimeLib.h  TinyScript.h  Tokens.h  VM.h
Lib/: TinyLib.h
Src/: main.c
Src/Compiler/: Assembler.c  Block.c  DeclarationBlock.c  Error.c  Expression.c  IO.c  Memory.c  SymbolTable.c  Tokenizer.c
Src/Runtime/: BinFile.c  RuntimeLib.c  VM.c
TinyLib/: TinyLib.tiny  Vector.tiny
TinyLib/Src/: Array.c  IO.c  Image.c  String.c  TinyScript.h
VM/: design.txt
VM/Include/: Array.h  Disassemble.h  IO.h  Image.h  Operations.h  VM.h  (+1 more)
include/: bytecode.h  compiler.h  expression.h  flags.h  io.h  symbol.h  tokenizer.h  vm.h
old_code/: CodeGen.cpp  CodeGen.hpp  Expression_old.cpp  Function_old.cpp  Function_old.hpp  Module_old.cpp  Module_old.hpp
src/: bytecode.c  compiler.c  expression.c  io.c  symbol.c  tinyscript.c  tokenizer.c  vm.c
std/: io.tiny
(+52 files in other folders)
